# contact-us-worker-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  example.dev.vars  package-lock.json  package.json  recipe.json  tarpaulin.toml  tsconfig.json  vitest.config.ts  wrangler.toml
.github/workflows/: contact-us-ci.yaml  contact-us-deploy.yaml
migrations/: 0001_contact_messages.sql
scripts/: test-contact.sh
src/: lib.rs
src/api/: cors.rs  mod.rs  router.rs
src/api/routes/: contact_commands.rs  health_check.rs  mod.rs
src/api/schemas/: responses.rs
src/application/: contact_message_service.rs  exceptions.rs  mod.rs
src/domain/: entity.rs  repository.rs
src/infrastructure/: contact_message_repository.rs  mod.rs  request_validation_service.rs
src/setup/: app_state.rs  config.rs
test/: integration.spec.ts
