[package]
name = "quest_lock_contact_us"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'd1'] }
worker-macros = { version = "0.6", features = ['http'] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1" }
strum_macros = { version = "0.27" }
uuid = { version = "1.18.1" , features = ["v7", "js"] }
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["wasmbind"] }
regex = "1.11.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tokio = "1.47.1"
wiremock = "0.6.5"

